--- a/download.htm
+++ b/download.htm
@@ -1,49 +1,16 @@
 <html>
 
-<head>
+<title></title>
 
-<title>Internet</title>
-</head>
+<body>
 
-<body style="background-color:yellow;">
+<!-- Add icon library -->
+<link rel="stylesheet" href="file:///C:/Users/User/Desktop/Untitled1.htm">
 
-<img src="google.png" alt="google" name="google.png" id="google.png" width="30" height="30" align="left">
-<form action="file:///C:/Users/User/Desktop/mything.htm" method="GET" placeholder="search">
-        <!-- A <textarea> tag (better for multi-line text)-->
-<input type="text" name="q" placeholder="search" cols="4" rows="5">
-        <input type="submit" value="search">
-</form>
+<!-- Auto width -->
+<button class="file:///C:/Users/User/Desktop/Untitled1.htm"><i class="fa fa-download"></i> Download</button>
 
 
-<a href="#bottom"><a href="file:///C:/Users/User/Desktop/Untitled2.htm">Youtube</a></div></a>
-<a href="#bottom"><a href="#bottom"><a href="http://uiaatoursop.unaux.com/">clipbucket</a></div></a>
-<a href="#bottom"><a href="https://twitter.com/">Twitter</a></div></a>
-<a href="#bottom"><a href="https://mail.google.com/mail/?tab=rm&ogbl">Gmail</a></div></a>
-<a href="#bottom"><a href="http://www.whatsapp.com/">Whatsapp</a></div></a>
-<a href="#bottom"><a href="https://www.instagram.com/">Instagram</a></div></a>
-<a href="#bottom"><a href="https://demos.buddyboss.com/online-communities/">Online communities</a></div></a>
-<a href="#bottom"><a href="https://www.google.co.ug/intl/en/about/products?tab=rh">Apps</a></div></a>
-<form action="file:///C:/Users/User/Desktop/Untitled5.htm" method="GET">
-        <input type="submit" value="how to use Internet">
-</form></textarea></form>
 
-<form action="file:///C:/Users/User/Desktop/Untitled4.htm" method="GET">
-        <input type="submit" value="create document">
-</form></textarea></form>
-<form action="file:///C:/Users/User/Desktop/draw.htm" method="GET">
-        <input type="submit" value="paint">
-</form></textarea></form>
-<center><img src="earth.png" alt="earth" name="earth.png" id="earth.png" width="200" height="200">
-<center><h1>Internet</h1></center>
-<form action="https://www.google.com/search" method="GET" placeholder="google">
-        <!-- A <textarea> tag (better for multi-line text)-->
-<input type="text" name="q" placeholder="search anything" cols="4" rows="5">
-        <input type="submit" value="search">
-</form>
-<form action="file:///C:/Users/User/Desktop/Untitled1.htm" method="GET">
-        <input type="submit" value="cancel">
-</form>
-
-</body></center>
-
+</body>
 </html>
