--- a/download.htm
+++ b/download.htm
@@ -4,13 +4,7 @@
 
 <body>
 
-<!-- Add icon library -->
-<link rel="stylesheet" href="file:///C:/Users/User/Desktop/Untitled1.htm">
-
-<!-- Auto width -->
-<button class="file:///C:/Users/User/Desktop/Untitled1.htm"><i class="fa fa-download"></i> Download</button>
-
-
+  <a href="https://github.com/Jessenyakana/Internet/archive/refs/heads/main.zip">Download Internet</a>
 
 </body>
 </html>
